<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.matsim</groupId>
    <artifactId>matsim-stuttgart</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <matsim.version>14.0-PR1547</matsim.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <!--MATSim test infrastructure.  Not transitive.-->
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <type>test-jar</type>
            <version>${matsim.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <!-- ExampleUtils -->
            <groupId>org.matsim</groupId>
            <artifactId>matsim-examples</artifactId>
            <version>${matsim.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>analysis</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>emissions</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>osm</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>vsp</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>bicycle</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>application</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.matsim-org</groupId>
            <artifactId>gtfs2matsim</artifactId>
            <version>12.2</version>
        </dependency>
        <dependency>
            <groupId>com.beust</groupId>
            <artifactId>jcommander</artifactId>
            <version>1.71</version>
        </dependency>
       <!-- <dependency>
            <groupId>com.github.matsim-vsp</groupId>
            <artifactId>pt-extensions</artifactId>
            <version>fac7381209</version>
        </dependency>
-->
        <!-- google spreadsheets -->
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.31.5</version>
        </dependency>
        <dependency>
            <groupId>com.google.oauth-client</groupId>
            <artifactId>google-oauth-client-jetty</artifactId>
            <version>1.31.5</version>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-sheets</artifactId>
            <version>v4-rev20210527-1.31.5</version>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.basedir}/${project.build.finalName}.jar</outputFile>
                            <transformers>
                                <!-- This bit sets the main class for the executable jar as you otherwise would with the assembly plugin -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>org.matsim.stuttgart.run.StuttgartApplication</Main-Class>
                                        <Specification-Vendor>org.matsim</Specification-Vendor>
                                        <Implementation-Vendor>org.matsim</Implementation-Vendor>
                                        <Implementation-Version>${project.version}</Implementation-Version>
                                    </manifestEntries>
                                </transformer>
                                <!-- This bit merges the various GeoTools META-INF/services files         -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>osgeo</id>
            <name>Geotools repository</name>
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
        <repository>
            <!-- Repository for MATSim releases (MATSim is not on Maven central) -->
            <id>matsim</id>
            <url>https://repo.matsim.org/repository/matsim/</url>
        </repository>
        <repository>
            <!-- For MATSim snapshots: -->
            <id>ojo-snapshots</id>
            <url>https://oss.jfrog.org/libs-snapshot</url>
        </repository>

        <repository>
            <id>SBB</id>
            <url>https://schweizerischebundesbahnen.bintray.com/simba.mvn</url>
        </repository>

        <!-- network reader dependencies -->
        <repository>
            <id>topobyte</id>
            <url>http://mvn.topobyte.de</url>
        </repository>
        <repository>
            <id>slimjars</id>
            <url>http://mvn.slimjars.com</url>
        </repository>

        <!-- stuff from github -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

    </repositories>

</project>